# poly-hft

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  agents.md  config.toml.example
.beads/: issues.jsonl
benches/: fair_value.rs
docs/: MULTI_AGENT_WORKFLOW.md  PRD.md  architecture.md  trading-flow.md
perf_test/: price_ticks_20260104_111232.parquet  price_ticks_20260104_111233.parquet  price_ticks_20260104_111234.parquet  price_ticks_20260104_111235.parquet  price_ticks_20260104_111237.parquet  price_ticks_20260104_111241.parquet  price_ticks_20260104_111242.parquet  price_ticks_20260104_111244.parquet  price_ticks_20260104_111245.parquet  price_ticks_20260104_111247.parquet  price_ticks_20260104_111249.parquet  price_ticks_20260104_111255.parquet  price_ticks_20260104_111259.parquet  price_ticks_20260104_111302.parquet  price_ticks_20260104_111308.parquet  price_ticks_20260104_111333.parquet  price_ticks_20260104_111337.parquet  price_ticks_20260104_111344.parquet  price_ticks_20260104_111353.parquet  price_ticks_20260104_111359.parquet  price_ticks_20260104_111401.parquet  price_ticks_20260104_111403.parquet  price_ticks_20260104_111415.parquet  price_ticks_20260104_111428.parquet  price_ticks_20260104_111434.parquet  price_ticks_20260104_111445.parquet  price_ticks_20260104_111446.parquet  price_ticks_20260104_111447.parquet  price_ticks_20260104_111448.parquet  price_ticks_20260104_111453.parquet  price_ticks_20260104_111456.parquet  price_ticks_20260104_111500.parquet  price_ticks_20260104_111501.parquet  price_ticks_20260104_111502.parquet  (+122 more)
src/: config.rs  (+2 more)
(+76 files in other folders)
